Updated screen.scss to fix BUEPopup Issues, Fix Title Margin, and Buttons Wrapping

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -163,7 +163,7 @@ textarea {
   margin: 0;
 	position: relative;
 }
-.title-with-buttons {
+#pagetitle.title-with-buttons {
 	float: left;
 	margin-right: 20px;
 	@media only screen and (max-width:320px) { padding-bottom: 10px; }
@@ -171,6 +171,7 @@ textarea {
 .block-button-ui {
 	position: relative;
 	top: 5px;
+	white-space: nowrap;
 	@media only screen and (max-width:320px) { top: -10px; }
 }
 .feed-icon {
@@ -4361,20 +4362,22 @@ fieldset .filter-help {
   text-transform: uppercase;
   color: #FFF;
   cursor: move;
+	border: none;
 }
 .bue-popup-close {
   /* The popup close button */
   text-indent: -9999px;
-  position: absolute;
-  overflow: hidden;
-  top: 9px;
-  right: 16px;
   border: none;
   width: 14px;
   height: 14px;
   background: url(../images/icon-close.png) no-repeat;
-  background-color: rgba(0,0,0,0);
-  margin-top: 5px;
+	margin: 12px 8px 0 12px;
+}
+.bue-popup-close:hover {
+    background-color: transparent;
+}
+.bue-popup-content {
+	margin: 0;
 }
 .bue-popup-body {
   border: none;
